2006-10-12  Andrew Cagney  <cagney@redhat.com>

	* TestBreakpoints.java (setUp): Move code creating event loop from
	here ...
	(testHitAndRun, testInsertRemove, testAddLots): ... to here.
	(tearDown): Only shutdown the eventLoop when it is running.
	
2006-10-11  Nurdin Premji  <npremji@redhat.com>

	* LinuxTask.java (sendAttach): Changed comment to explain reasoning for below.
	Applied gnu format.

	* LinuxTask.java (sendAttach): Manually tell the thread that the process
	has been attached Fixes 3316.
	* TestProcStopped.java: Added license.
	(stopped): Added.
	(running): Ditto.
	(testStoppedDetached):
	(testStoppedAttached):
	(testRunningAckDaemon): 
	(testRunningDetached): 
	(testRunningAttached): Ditto.
	(testStoppedAckDaemon): Changed to use stopped.
	(MyTester): Changed to stop eventloop after an attach.

2006-10-11  Mike Cvet  <mcvet@redhat.com>

	* ProcAttachedObserver.java (ProcAttachedObserver): Call iterateAttach()
	instead of doing the attaching here.
	(iterateAttach): Added.
	(addedTo): Makes a call to the local ProcObserver.ProcTasks observer.

2006-10-11  Mark Wielaard  <mark@klomp.org>

	* BreakpointAddresses.java (getCodeObservers): Return the Collection
	of Code Observers, not just an Iterator.
	* Observable.java (observable): Make protected final for use in
	subclasses.
	* PendingCodeObserver.java: Removed.
	* Proc.java (requestAddObservation): Create TaskObservation with
	adding true.
	(requestDeleteObserver): Likewise with adding false.
	(SyscallAction): New inner class.
	(requestAddSyscallObserver): Create TaskObservation with
	SyscallAction.
	(requestDeleteSyscallObserver): Likewise.
	(BreakpointAction): New inner class.
	(requestAddCodeObserver): Create TaskObservation with 
	BreakpointAction.
	(requestDeleteCodeObserver): Likewise.
	* Task.java (Task): Create TaskObservation with adding true.
	(handleAddObserver): Renamed to handleAddObservation().
	(handleDeleteObserver): Renamed to handleDeleteObservation().